--- a/PatPet/Base.lproj/Main.storyboard
+++ b/PatPet/Base.lproj/Main.storyboard
@@ -165,6 +165,7 @@
                                                 </constraints>
                                                 <size key="customSize" width="105" height="105"/>
                                                 <connections>
+                                                    <outlet property="colorLabel" destination="RJ7-MT-saC" id="Oz3-Kr-0RG"/>
                                                     <outlet property="myDescriptionLabel" destination="RJ7-MT-saC" id="GWQ-Ml-D6K"/>
                                                     <outlet property="myImage" destination="syS-ay-vrS" id="bmz-ZR-8kH"/>
                                                     <segue destination="Cd6-PZ-DA1" kind="show" identifier="showProfile" id="CBE-x1-lwn"/>
@@ -213,7 +214,7 @@
                         <rightBarButtonItems>
                             <barButtonItem image="1_char_bf3.png" id="ibE-ql-9Lq">
                                 <connections>
-                                    <segue destination="AD4-oM-99l" kind="presentation" modalPresentationStyle="pageSheet" modalTransitionStyle="crossDissolve" id="NV2-Si-M5Y"/>
+                                    <segue destination="AD4-oM-99l" kind="presentation" modalPresentationStyle="pageSheet" modalTransitionStyle="coverVertical" id="NV2-Si-M5Y"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem image="1_label_bf3.png" id="L3C-nK-V83">
@@ -221,7 +222,6 @@
                                     <segue destination="3xz-fq-ehO" kind="presentation" modalTransitionStyle="coverVertical" id="RS6-wS-lPn"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem image="1_redar_bf.png" id="4bi-O2-ujx"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
@@ -250,8 +250,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="p18.png" translatesAutoresizingMaskIntoConstraints="NO" id="LSy-Ch-eo5">
-                                <rect key="frame" x="0.0" y="65" width="414" height="671"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9I0-ho-HrR">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="h1u-dJ-7O4"/>
+                                </constraints>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6e0-Vd-JES">
                                 <rect key="frame" x="0.0" y="631" width="414" height="105"/>
                                 <color key="backgroundColor" red="0.92414166040000001" green="0.99494917549999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -293,11 +299,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIz-b8-lty">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                                <color key="tintColor" red="0.875099778175354" green="0.56946396515938769" blue="0.56812084034575605" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="favIcon_bf.png"/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yu3-hQ-40O">
                                 <rect key="frame" x="177" y="651" width="60" height="60"/>
                                 <constraints>
@@ -309,10 +310,6 @@
                                     <segue destination="Eyy-5m-GrF" kind="presentation" modalTransitionStyle="coverVertical" id="HFR-Lr-jMj"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="egR-uQ-eLK">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
-                                <state key="normal" image="favIcon_bf.png"/>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg2.png" translatesAutoresizingMaskIntoConstraints="NO" id="msj-mf-wd8">
                                 <rect key="frame" x="15" y="706" width="10" height="10"/>
                                 <constraints>
@@ -320,17 +317,32 @@
                                     <constraint firstAttribute="width" constant="10" id="an8-rY-sVj"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMj-5R-IxJ">
+                                <rect key="frame" x="15" y="30" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="fOe-bC-nXw"/>
+                                    <constraint firstAttribute="height" constant="30" id="mX8-K6-TNu"/>
+                                </constraints>
+                                <state key="normal" image="icn-back.png"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="Cd6-PZ-DA1" eventType="touchUpInside" id="hWb-cA-xJJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="LSy-Ch-eo5" secondAttribute="bottom" id="4bw-Fe-Z7L"/>
                             <constraint firstItem="Csx-AV-AAj" firstAttribute="leading" secondItem="S3T-kc-1Hq" secondAttribute="leading" id="5fz-Jx-juD"/>
                             <constraint firstAttribute="trailing" secondItem="LSy-Ch-eo5" secondAttribute="trailing" id="EkL-vH-rk1"/>
+                            <constraint firstItem="9I0-ho-HrR" firstAttribute="top" secondItem="VDi-Al-9CD" secondAttribute="top" id="FlR-To-n4l"/>
                             <constraint firstItem="S3T-kc-1Hq" firstAttribute="top" secondItem="6e0-Vd-JES" secondAttribute="top" id="Ltt-Mx-Epn"/>
+                            <constraint firstItem="LMj-5R-IxJ" firstAttribute="top" secondItem="VDi-Al-9CD" secondAttribute="top" constant="30" id="MrL-0u-gk8"/>
+                            <constraint firstAttribute="trailing" secondItem="LMj-5R-IxJ" secondAttribute="trailing" constant="15" id="Noz-Zt-BKt"/>
+                            <constraint firstItem="9I0-ho-HrR" firstAttribute="leading" secondItem="VDi-Al-9CD" secondAttribute="leading" id="OFw-5R-z3u"/>
                             <constraint firstItem="6e0-Vd-JES" firstAttribute="leading" secondItem="VDi-Al-9CD" secondAttribute="leading" id="OqP-c4-NHf"/>
                             <constraint firstItem="msj-mf-wd8" firstAttribute="centerY" secondItem="oju-56-Mgl" secondAttribute="centerY" id="TUL-0g-wFc"/>
                             <constraint firstItem="oju-56-Mgl" firstAttribute="bottom" secondItem="Csx-AV-AAj" secondAttribute="bottom" id="VCM-vC-ouF"/>
-                            <constraint firstItem="LSy-Ch-eo5" firstAttribute="top" secondItem="VDi-Al-9CD" secondAttribute="top" constant="65" id="VGf-hI-aoe"/>
+                            <constraint firstItem="LSy-Ch-eo5" firstAttribute="top" secondItem="VDi-Al-9CD" secondAttribute="top" id="VGf-hI-aoe"/>
                             <constraint firstItem="oju-56-Mgl" firstAttribute="leading" secondItem="Csx-AV-AAj" secondAttribute="trailing" id="XE3-my-EIE"/>
                             <constraint firstItem="Csx-AV-AAj" firstAttribute="top" secondItem="S3T-kc-1Hq" secondAttribute="bottom" id="Yqd-va-E5q"/>
                             <constraint firstItem="msj-mf-wd8" firstAttribute="trailing" secondItem="oju-56-Mgl" secondAttribute="leading" constant="-5" id="ZNX-MQ-NJ6"/>
@@ -340,15 +352,18 @@
                             <constraint firstItem="oju-56-Mgl" firstAttribute="centerX" secondItem="Csx-AV-AAj" secondAttribute="centerX" id="fdB-2H-Bwf"/>
                             <constraint firstItem="msj-mf-wd8" firstAttribute="leading" secondItem="S3T-kc-1Hq" secondAttribute="leading" id="jhH-RP-V3l"/>
                             <constraint firstItem="6e0-Vd-JES" firstAttribute="top" secondItem="Yu3-hQ-40O" secondAttribute="top" constant="-20" id="nEt-ab-ww2"/>
+                            <constraint firstAttribute="trailing" secondItem="9I0-ho-HrR" secondAttribute="trailing" id="oje-8A-zfK"/>
                             <constraint firstItem="LSy-Ch-eo5" firstAttribute="leading" secondItem="VDi-Al-9CD" secondAttribute="leading" id="p2x-RC-jsm"/>
                             <constraint firstItem="6e0-Vd-JES" firstAttribute="centerX" secondItem="Yu3-hQ-40O" secondAttribute="centerX" id="r0N-p5-BmE"/>
                             <constraint firstItem="S3T-kc-1Hq" firstAttribute="top" secondItem="6e0-Vd-JES" secondAttribute="top" constant="15" id="s8E-gv-tlL"/>
                             <constraint firstAttribute="trailing" secondItem="6e0-Vd-JES" secondAttribute="trailing" id="sBX-5q-hHA"/>
                             <constraint firstItem="S3T-kc-1Hq" firstAttribute="trailing" secondItem="6e0-Vd-JES" secondAttribute="trailing" constant="15" id="uci-IV-Jlx"/>
                             <constraint firstItem="oju-56-Mgl" firstAttribute="centerY" secondItem="Csx-AV-AAj" secondAttribute="centerY" id="vSR-WV-QvA"/>
+                            <constraint firstItem="LMj-5R-IxJ" firstAttribute="leading" secondItem="VDi-Al-9CD" secondAttribute="leading" constant="15" id="zmL-Da-ifM"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="Noz-Zt-BKt"/>
                                 <exclude reference="Ltt-Mx-Epn"/>
                                 <exclude reference="uci-IV-Jlx"/>
                                 <exclude reference="VCM-vC-ouF"/>
@@ -361,6 +376,8 @@
                     <navigationItem key="navigationItem" id="pIN-bb-weo"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
+                        <outlet property="backButton" destination="LMj-5R-IxJ" id="csu-Lf-nwB"/>
+                        <outlet property="gradientView" destination="9I0-ho-HrR" id="onj-yV-X3O"/>
                         <outlet property="imageView" destination="LSy-Ch-eo5" id="f5X-Uw-1BR"/>
                         <outlet property="indication" destination="6e0-Vd-JES" id="6CQ-FE-B20"/>
                         <outlet property="myAge" destination="Csx-AV-AAj" id="zmr-2O-3m5"/>
@@ -1358,7 +1375,6 @@
         <image name="1_chat.png" width="400" height="80"/>
         <image name="1_chat2.png" width="400" height="80"/>
         <image name="1_label_bf3.png" width="25" height="30"/>
-        <image name="1_redar_bf.png" width="31" height="30"/>
         <image name="Prof_1.png" width="287" height="287"/>
         <image name="Prof_c3.png" width="861" height="861"/>
         <image name="Prof_s1.png" width="802" height="802"/>
@@ -1368,6 +1384,7 @@
         <image name="bg2.png" width="861" height="861"/>
         <image name="chatIcon.png" width="80" height="80"/>
         <image name="favIcon_bf.png" width="80" height="80"/>
+        <image name="icn-back.png" width="44" height="44"/>
         <image name="icn_chat_bf.png" width="80" height="80"/>
         <image name="icn_preference.png" width="130" height="130"/>
         <image name="icn_setting.png" width="130" height="130"/>
